# ProductHunt-Scraper

./: .dockerignore  .gitignore  CODEBASE_DOCUMENTATION.md  Dockerfile  Makefile  README.md  REQUIREMENTS_TRACEABILITY.md  RUNBOOK.md  SUBMISSION_CHECKLIST.md  TERMINAL_CHECKLIST.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: build_bundle.py  demo_pipeline.sh  deploy_existing_droplet.sh
scripts/cron/: crontab.example  entrypoint.sh
scripts/sql/: verify_pipeline.sql
sprints/: SPRINT_PLAN.md  sprint_0_scaffolding.md  sprint_1_models.md  sprint_2_api_client.md  sprint_3_docker_volume.md  sprint_3_scraper.md  sprint_4_reliability_observability.md  sprint_4_tracker_e2e.md  sprint_5_packaging.md
sprints/completed/: sprint_10_db_integrity.md  sprint_11_explicit_fallback_warnings.md  sprint_12_api_client_srp.md  sprint_13_scraper_decomposition.md  sprint_14_dry_cli.md  sprint_15_storage_sql_helpers.md  sprint_19_strict_terms_empty_string.md  sprint_1_sqlite_persistence.md  sprint_20_narrow_exception_catch.md  sprint_21_split_passes_filter.md  sprint_22_product_searchable_text.md  sprint_23_generic_parse_env.md  sprint_24_pagination_constants.md  sprint_25_cli_bundle_manifest.md  sprint_26_dip_product_provider.md  sprint_27_ocp_strategy_polymorphism.md  sprint_28_remove_banner_comments.md  sprint_29_provider_factory.md  sprint_2_scheduler_cron.md  sprint_30_narrow_fallback_exception.md  sprint_31_remove_lingering_banners.md  sprint_32_centralize_defaults.md  sprint_33_product_name_invariant.md  sprint_34_query_context.md  sprint_35_delete_product_haystack.md  sprint_36_remove_test_banners.md  sprint_37_purge_sprint_labels.md  sprint_38_delete_ghost_hunting_test.md  sprint_39_dry_from_dict.md  sprint_40_delete_dead_shims.md  sprint_41_static_build_query.md  sprint_42_honest_docstring.md  sprint_43_tracker_result_is_transient.md  (+26 more)
tests/: conftest.py
(+51 files in other folders)
