[tool.poetry]
name = "ph_ai_tracker"
version = "0.1.3"
description = "Library to identify trending AI products on Product Hunt (API + scraping fallback)."
authors = ["atg25 <atg25@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/atg25/ProductHunt-Scraper"
repository = "https://github.com/atg25/ProductHunt-Scraper"
packages = [{ include = "ph_ai_tracker", from = "src" }]
include = ["src/ph_ai_tracker/py.typed"]
keywords = ["producthunt", "ai", "graphql", "scraping"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.scripts]
ph-ai-tracker = "ph_ai_tracker.__main__:main"
ph-ai-tracker-runner = "ph_ai_tracker.scheduler:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
lxml = { version = "^5.2.2", optional = true }

[tool.poetry.extras]
# Optional faster HTML parsing for BeautifulSoup. If lxml wheels aren't available
# for your platform/Python, the package still works via html.parser.
lxml = ["lxml"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
